# rakune

./: .gitignore  Cargo.toml  README.md
rakune/: Cargo.toml
rakune-cli/: Cargo.toml
rakune-cli/src/: main.rs  test.rs
rakune/src/: lib.rs  repository.rs
src/: lib.rs  llm.rs  repository.rs
